[tool.poetry]
name = "anl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "readme.md"
packages = [
    { include = "ANL" }
]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
